# discord_b_bot

./: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: build_and_push_image.yml  deploy_flyctl.yml
src/: main.rs
src/cli/: mod.rs
src/domain/: message.rs
src/repository/: food.rs  mod.rs  rate.rs
src/repository/fugle/: mod.rs
src/transport/: handler.rs
src/transport/discord/: mod.rs
src/usecase/: message.rs
src/utils/: config.rs
