[package]
name = "bt_discord_bot"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = "0.11.13"
serde = { version = "1.0.152", features = ["derive"] }
serenity = { version = "0.11.5", default-features = false, features = ["builder", "client", "gateway", "rustls_backend", "cache", "http", "model"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
regex = "1.7"