[package]
name = "bt_discord_bot"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = ["builder", "client", "gateway", "rustls_backend", "cache", "http", "model"] }
tokio = { version = "1.23", features = ["rt-multi-thread", "macros"] }
url = "2.4"

[dev-dependencies]
regex = "1.7"
